
      Environment variable \env{_R_CHECK_LENGTH_1_LOGIC2_} no longer has
      any effect.
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item The included BLAS sources have been updated to those shipped
      with LAPACK version 3.10.1.  (This caused some platform-dependent
      changes to package check output.)  And then to the sources from
      LAPACK version 3.11 (with changes only to double complex
      subroutines).

      \item The LAPACK sources have been updated to version 3.11.0.  (No
      new subroutines have been added, so this almost entirely bug
      fixes.)

      \item The parser now signals \emph{classed} errors, notably in
      case of the pipe operator \code{|>}.  The error object and
      message now give line and column numbers, mostly as proposed and
      provided by Duncan Murdoch in \PR{18328}.

      \item \code{toeplitz()} is now generalized for asymmetric cases,
      with a \code{toeplitz2()} variant.

      \item \code{xy.coords()} and \code{xyz.coords()} and consequently,
      e.g., \code{plot(x,y, log="y")} now signal a \emph{classed} warning
      about negative values of y (where \code{log(.)} is \code{NA}).
      Such a warning can be specifically suppressed or caught otherwise.

      \item Regular expression functions now check more thoroughly whether
      their inputs are valid strings (in their encoding, e.g.\sspace{}in UTF-8).

      \item The performance of \code{grep()}, \code{sub()},
      \code{gsub()} and \code{strsplit()} has been improved,
      particularly with \code{perl = TRUE} and \code{fixed = TRUE}.  Use
      of \code{useBytes = TRUE} for performance reasons should no longer
      be needed and is discouraged: it may lead to incorrect results.

      \item \code{apropos()} gains an argument \code{dot_internals} which
      is used by the completion (\code{help(rcompgen)}) engine to also
      see \pkg{base} internals such as \code{.POSIXct()}.
